<resources>
    <string name="app_name">FirestoreNotes</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_home">Home</string>
    <string name="menu_login">Login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="register">Register</string>
    <string name="login">Login</string>
    <string name="menu_logout">Logout</string>
    <string name="title_tasks">Tasks</string>
    <string name="title_notes">Notes</string>
    <string name="new_note">New note</string>
    <string name="account">Account</string>
    <string name="recover_password">Recover password</string>
    <string name="cancel">Cancel</string>
    <string name="open_drawer">Open drawer</string>
    <string name="close_drawer">Close drawer</string>
</resources>